--- a/meta/4-8.md
+++ b/meta/4-8.md
@@ -6,7 +6,7 @@ graph_title: global_indicators.4-8-title
 indicator_sort_order: 04-08-01
  
 # 2. Grafikart auswaehlen: 
-data_non_statistical: false  # set to 'false' for chart/graph visualization 
+data_non_statistical: true  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Teilnehmerzahl Erwachsenenbildung 
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Referat IV der Stadt Ingolstadt"  # data source  
+SOURCE_TYPE: Amt für Kinderbetreuung und -bildung  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,7 +31,35 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-In den Teilnehmerzahlen gibt es keine Unterscheidung zwischen Erwachsenen und Jugendlichen. Es ist die Gesamtzahl der Teilnehmenden in der Erwachsenenbildungseinrichtung der VHS. Daher ist nur die Ermittlung der Gesamtteilnehmer-Zahl pro Jahr möglich; Hinzu kommen die Teilnehmer an der Simon-Mayr-Sing- und Musikschule: Ermittlung/Definition = Anzahl (Kopfzahlen) der belegten Kurse von Personen ab 18 Jahren (bis auf EMP (Elementare Musikpädagogik) sind alle Angebote für Erwachsene offen). <br>
+In Ingolstadt wird das Angebot an Krippen- und Kitaplätzen ständig ausgebaut und so ein hochwertiges Betreuungsangebot für Kinder unter drei Jahren sowie im Kindergarten- und Schulkindalter geschaffen. Die Ausweitung der Betreuungsangebote hilft insbesondere kinderreichen Familien und Alleinerziehenden, den Lebensunterhalt durch berufliche Tätigkeit selbst bestreiten zu können, was wiederum das Armutsrisiko mindert.<br> 
+<br>
+<b>Neu eröffnete Einrichtungen im Jahr 2022:<b><br> 
+Städtische Kindertageseinrichtungen: Kita „Odilostraße“ und Kita „Auf der Höh“<br>  
+<br>
+Bürgerhilfe Ingolstadt Kita GmbH: kinderEnergie<br>
+<br>
+Im Jahr 2022 wurden insgesamt 54 weitere Krippenplätze und 85 Kindergartenplätze geschaffen.<br>  
+<br>
+<b>Gesamtanzahl Kitaplätze, Stand Dezember 2022</b><br> 
+Regelförderung 0-3 Jahre: 1206 Kinder<br> 
+Regelförderung 3-6 Jahre: 4264 Kinder<br> 
+<br>
+Betreuungsquote, Stichtag 1.11.2022<br> 
+0-3 Jahre: 31,23% (1409 Kinder)<br> 
+3-6 Jahre: 96,82% (4.321 Kinder)<br>  
+<br>
+<b>Neu eröffnete Einrichtungen im Jahr 2023:</b><br>  
+Städtische Kindertageseinrichtungen: Kita „Blumenviertel“ in Mailing und Naturgruppe, Erweiterung um eine Gruppe<br> 
+<br>
+Katholische Kindertageseinrichtungen Ingolstadt gemeinnützige GmbH: Kita St. Rupert, weitere Kindergartengruppe<br> 
+<br>
+Im Jahr 2023 wurden insgesamt 12 weitere Krippenplätze und 70 Kindergartenplätze geschaffen.<br>  
+<br>
+Gesamtanzahl Kitaplätze, Stand Dezember 2023<br> 
+Regelförderung 0-3 Jahre: 1256 Kinder<br> 
+Regelförderung 3-6 Jahre: 4211 Kinder<br> 
+<br>
+Eine Übersicht zu allen Kindertageseinrichtungen finden Sie im <a href="https://stadtplan.ingolstadt.de/#ll=48.761277,11.388359&z=13&m=custom379&cat=20434,20438,20439,20440">Geoportal der Stadt Ingolstadt</a>. Mehr Informationen zur Kinderbetreuung finden Sie auf der Internetseite des <a href="https://www.ingolstadt.de/Leben/Kinder-Jugend-Familie/Kinderbetreuung/Kitas-der-Stadt-Ingolstadt/?La=1">Amts für Kinderbetreuung und -bildung</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W3.1: Förderung von lebenslangem Lernen (inkl. Menschen in besonderen Lebenslagen)<br>
