--- a/meta/4-8.md
+++ b/meta/4-8.md
@@ -33,7 +33,7 @@ reporting_status: complete
 ---
 In Ingolstadt wird das Angebot an Krippen- und Kitaplätzen ständig ausgebaut und so ein hochwertiges Betreuungsangebot für Kinder unter drei Jahren sowie im Kindergarten- und Schulkindalter geschaffen. Die Ausweitung der Betreuungsangebote hilft insbesondere kinderreichen Familien und Alleinerziehenden, den Lebensunterhalt durch berufliche Tätigkeit selbst bestreiten zu können, was wiederum das Armutsrisiko mindert.<br> 
 <br>
-<b>Neu eröffnete Einrichtungen im Jahr 2022:<b><br> 
+<b>Neu eröffnete Einrichtungen im Jahr 2022:</b><br> 
 Städtische Kindertageseinrichtungen: Kita „Odilostraße“ und Kita „Auf der Höh“<br>  
 <br>
 Bürgerhilfe Ingolstadt Kita GmbH: kinderEnergie<br>
@@ -58,6 +58,10 @@ Im Jahr 2023 wurden insgesamt 12 weitere Krippenplätze und 70 Kindergartenplät
 Gesamtanzahl Kitaplätze, Stand Dezember 2023<br> 
 Regelförderung 0-3 Jahre: 1256 Kinder<br> 
 Regelförderung 3-6 Jahre: 4211 Kinder<br> 
+<br>
+Betreuungsquote, Stichtag 1.11.2023<br>
+0-3 Jahre: 34,28% (1.496 Kinder)<br> 
+3-6 Jahre: 96,58% (4.383 Kinder)<br>  
 <br>
 Eine Übersicht zu allen Kindertageseinrichtungen finden Sie im <a href="https://stadtplan.ingolstadt.de/#ll=48.761277,11.388359&z=13&m=custom379&cat=20434,20438,20439,20440">Geoportal der Stadt Ingolstadt</a>. Mehr Informationen zur Kinderbetreuung finden Sie auf der Internetseite des <a href="https://www.ingolstadt.de/Leben/Kinder-Jugend-Familie/Kinderbetreuung/Kitas-der-Stadt-Ingolstadt/?La=1">Amts für Kinderbetreuung und -bildung</a><br>
 <br>
