--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -34,6 +34,7 @@
 4-7-title: Schulabbrecherquote 
 4-8-title: Wohnungsnahe Grundversorgung - Kita
 4-9-title: Wohnungsnahe Grundversorgung - Grundschule
+4-10-title: Nutzung der KiTa-App
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 5-2-title: Empfänger/-innen von Hilfe zum Lebensunterhalt
