--- a/meta/4-10.md
+++ b/meta/4-10.md
@@ -38,4 +38,4 @@ Alle KiTas nutzen die App seit der Einführung. Die Zahl der Eltern, die die App
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.2: Erhöhung der digitalen Medienkompetenz, Abbau der digitalen Spaltung der Gesellschaft und Versorgungsbreite (Hardware) sicherstellen<br>
 <br>
-<b>BNK-Indikator</b><br>
+<b>Ingolstadtspezifischer Indikator</b><br>
