--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -35,6 +35,7 @@
 4-8-title: Wohnungsnahe Grundversorgung - Kita
 4-9-title: Wohnungsnahe Grundversorgung - Grundschule
 4-10-title: Nutzung der KiTa-App
+4-11-title: Städtische Kultur- und Bildungseinrichtungen mit Internet- und PC-Zugängen
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 5-2-title: Empfänger/-innen von Hilfe zum Lebensunterhalt
