--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -36,6 +36,7 @@
 4-9-title: Wohnungsnahe Grundversorgung - Grundschule
 4-10-title: Nutzung der KiTa-App
 4-11-title: Städtische Kultur- und Bildungseinrichtungen mit Internet- und PC-Zugängen
+4-12-title: Freiwillige finanzielle  Kulturförderung
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 5-2-title: Empfänger/-innen von Hilfe zum Lebensunterhalt
