--- a/meta/4-11.md
+++ b/meta/4-11.md
@@ -44,4 +44,4 @@ Seit 2023 verfügt die Volkshochschule Ingolstadt über eine eigene Bandbreite, 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.2: Erhöhung der digitalen Medienkompetenz, Abbau der digitalen Spaltung der Gesellschaft und Versorgungsbreite (Hardware) sicherstellen<br>
 <br>
-<b>BNK-Indikator</b><br>
+<b>Ingolstadtspezifischer Indikator</b><br>
