--- a/meta/5-2.md
+++ b/meta/5-2.md
@@ -1,15 +1,15 @@
 ---
 # 1. Indikator-Nummer eingeben 
 sdg_goal: 5 
-indicator_number: 5.6
-graph_title: global_indicators.5-6-title
-indicator_sort_order: 05-06-01
+indicator_number: 5.2
+graph_title: global_indicators.5-2-title
+indicator_sort_order: 05-02-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Verdienstabstand zwischen Frauen und Männern 
+computation_units: Euro
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Medianeinkommen-Abstand in Euro (Vollzeit) zwischen Frauen und Männern
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: "Bundesagentur für Arbeit"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
