--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -39,11 +39,10 @@
 4-12-title: Freiwillige finanzielle  Kulturförderung
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
-5-2-title: Empfänger/-innen von Hilfe zum Lebensunterhalt
-5-3-title: Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber/-innen und BaföG-Empfänger/-innen)
+5-2-title: Verdienstabstand zwischen Frauen und Männern
 5-4-title: Frauenanteil im Stadtrat, Gemeinderat bzw. Kreistag
 5-5-title: sv-Beschäftigungsquote
-5-6-title: Verdienstabstand zwischen Frauen und Männern (Medianeinkommen-Abstand in Euro (Vollzeit))
+
 
 6-1-title: Anzahl sanitärer Einrichtungen im öffentlichen Raum 
 6-2-title: Anzahl Trinkwasserbrunnen
