--- a/meta/5-3.md
+++ b/meta/5-3.md
@@ -1,9 +1,9 @@
 ---
 # 1. Indikator-Nummer eingeben 
 sdg_goal: 5 
-indicator_number: 5.4
-graph_title: global_indicators.5-4-title
-indicator_sort_order: 05-04-01
+indicator_number: 5.3
+graph_title: global_indicators.5-3-title
+indicator_sort_order: 05-03-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
@@ -11,16 +11,14 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Prozent 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Frauenanteil 
+   value: Stadtrat 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Prozentualer Frauenanteil im Stadtrat der Stadt Ingolstadt
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: "Amt für Statistik und Stadtforschung der Stadt Ingolstadt"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,9 +29,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentualer Frauenanteil im Stadtrat, Gemeinderat bzw. Kreistag.<br>
+Prozentualer Frauenanteil im Stadtrat der Stadt Ingolstadt<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.5: Förderung von Integration, Inklusion und Gleichstellung der Verwaltungsgremien<br>
+V1.1.2: Förderung der geschlechterunabhängigen Chancengleichheit <br>
 <br>
 <b>BNK-Indikator</b>
