--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -40,9 +40,7 @@
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 5-2-title: Verdienstabstand zwischen Frauen und Männern
-5-4-title: Frauenanteil im Stadtrat, Gemeinderat bzw. Kreistag
-5-5-title: sv-Beschäftigungsquote
-
+5-3-title: Frauenanteil im Stadtrat
 
 6-1-title: Anzahl sanitärer Einrichtungen im öffentlichen Raum 
 6-2-title: Anzahl Trinkwasserbrunnen
