--- a/meta/6-1.md
+++ b/meta/6-1.md
@@ -7,31 +7,31 @@ indicator_sort_order: 06-01-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl sanitärer Einrichtungen im öffentlichen Raum  
+computation_units: Anzahl sanitärer Einrichtungen 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: sanitäre Einrichtungen 
+   value: barrierefrei
+ - field: sanitäre Einrichtungen 
+   value: gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl sanitärer Einrichtungen im öffentlichen Raum und Anteil der barrierefreien Einrichtungen
 
-SOURCE_TYPE: "Amt für Verkehrsmanagement und Geoinformation"   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: "Amt für Gebäudemanagement der Stadt Ingolstadt"   # data source  
+source_earliest_available_1: 2023
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl sanitärer Einrichtungen im öffentlichen Raum.<br>
+Im Stadtgebiet Ingolstadt werden insgesamt 23 öffentliche sanitäre Einrichtungen angeboten. 19 hiervon sind barrierefrei zugänglich. Die öffentliche Toilette im Alten Rathaus ist mit Einschränkung barrierefrei zugänglich.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus<br>
