--- a/meta/6-2.md
+++ b/meta/6-2.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl Trinkwasserbrunnen im öffentlichen Raum
 
 SOURCE_TYPE: <a href="https://stadtplan.ingolstadt.de/">Geoportal Ingolstadt</a>  # data source  
 source_earliest_available_1: 2023
