--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -46,6 +46,7 @@
 6-2-title: Anzahl Trinkwasserbrunnen
 6-3-title: Nitrat im Grundwasser
 6-4-title: Verhältnis von Trennsystemen zu Mischwasserkanälen
+6-5-title: Stickstoffanteil im Abwasser
 
 7-1-title: Strom aus erneuerbaren Energien
 7-2-title: Zubau Photovoltaikanlagen in Kilowatt Peak
