--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -105,7 +105,7 @@
 12-6-title: Trinkwasserverbrauch - private Haushalte
 
 13-1-title: Anzahl betroffener Bürger/-innen durch besonders belastete Gebiete aus Klimaanalysekarte
-13-2-title: Anzahl der Klimapartnerschaften
+13-2-title: CO2e-Emissionen
 13-3-title: Hitzetage pro Jahr
 13-4-title: Vielfalt und Qualität von Biotoptypen
 
