--- a/meta/1-7.md
+++ b/meta/1-7.md
@@ -11,18 +11,14 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl der Alleinerziehenden
 data_start_values:  # initialize the field to be shown  
- - field: Arbeitslose Alleinerziehende 
-   value: weiblich 
- - field: Arbeitslose Alleinerziehende 
-   value: männlich
- - field: Arbeitslose Alleinerziehende 
-   value: Deutsch 
- - field: Arbeitslose Alleinerziehende 
-   value: Nicht-Deutsch
+ - field: Alleinerziehende
+   value: Leistungsbezieher/-innen 
+ - field: Alleinerziehende 
+   value: gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl der arbeitslosen Alleinerziehenden in Ingolstadt unterteilt nach Geschlecht und Herkunft
+computation_definitions: Anzahl der Alleinerziehenden in Ingolstadt und Alleinerziehende, die Leistungen nach SGB II beziehen
 
 SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?nn=20656&topic_f=alleinerziehend">Bundesagentur für Arbeit</a>  # data source  
 source_earliest_available_1: 2019
@@ -35,7 +31,7 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator beschreibt wie viele Alleinerziehende Leistungsempfänger/-innen nach SGB II es in Ingolstadt gibt. <br>
+Der Indikator beschreibt die Anzahl der Alleinerziehenden in Ingolstadt und Alleinerziehende, die Leistungen nach SGB II beziehen. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br> 
 V1.2: Unterstützung von Menschen in besonderen Lebenslagen<br>
