--- a/meta/1-7.md
+++ b/meta/1-7.md
@@ -20,8 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der Alleinerziehenden in Ingolstadt und Alleinerziehende, die Leistungen nach SGB II beziehen
 
-SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?nn=20656&topic_f=alleinerziehend">Bundesagentur für Arbeit</a>, Melderegister: eigene Berechnungen
-des Amt für Statistik und Stadtforschung der Stadt Ingolstadt   # data source  
+SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?nn=20656&topic_f=alleinerziehend">Bundesagentur für Arbeit</a>, eigene Berechnungen aus dem Melderegister durch das Amt für Statistik und Stadtforschung der Stadt Ingolstadt   # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
