--- a/meta/8-1.md
+++ b/meta/8-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 08-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anteil erwerbstätige Leistungsberechtigte 
+computation_units: Prozent 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anteil der aufstockenden ALG II Leistungen insgesamt
 
 SOURCE_TYPE: "Jobcenter Ingolstadt"   # data source  
 source_earliest_available_1: 2019 
@@ -31,13 +31,13 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil der erwerbstätigen ALG-II Bezieher/-innen an allen erwerbsfähigen Leistungsbezieher/-innen. <br>
+Anteil der erwerbstätigen Anteil der aufstockenden ALG II Leistungen insgesamt an allen erwerbsfähigen Leistungsbezieher/-innen. <br>
 <br>
 <b>Hinweis:</b> Zum 1. Januar 2023 hat das Bürgergeld das Arbeitslosengeld II abgelöst. Mit dem Bürgergeld hat die Bundesregierung eine Sozialreform auf den Weg gebracht. Die staatliche Hilfe ist nun bürgernäher, unbürokratischer und zielgerichteter. Menschen in der Grundsicherung werden besser qualifiziert und damit in dauerhafte Jobs vermittelt. Außerdem wurde die Berechnung der Regelbedarfe auf eine neue Grundlage gestellt.<br>
 <br>
 Quelle: <a href="https://www.bundesregierung.de/breg-de/schwerpunkte/entlastung-fuer-deutschland/buergergeld-2125010">Bundesregierung</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.1: Förderung von lebenslangem Lernen (inkl. Menschen in besonderen Lebenslagen)<br>
+V1.4: Armutsbekämpfung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
