--- a/meta/8-2.md
+++ b/meta/8-2.md
@@ -11,14 +11,18 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Prozent 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Beschäftigtenquote 
+   value: Frauen 
+ - field: Beschäftigtenquote 
+   value: Männer
+ - field: Beschäftigtenquote 
+   value: Deutsch 
+ - field: Beschäftigtenquote 
+   value: Nicht-Deutsch
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: sv-Beschäftigtenquote in Ingolstadt Beschäftigte unterteilt nach Geschlecht und Deutsch / Nicht-Deutsch
 
 SOURCE_TYPE: <a href= "https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=beschaeftigung-sozbe-bq-heft">Bundesagentur für Arbeit</a>  # data source  
  
@@ -32,9 +36,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentualer Anteil der Beschäftigten im Alter von 15 bis 64 Jahre. <br>
+Dieser Indikator zeigt die sv-Beschäftigtenquote der in Ingolstadt Beschäftigte an unterteilt nach Geschlecht und Deutsch / Nicht-Deutsch. Die Quoten sind Wohnortsstatistiken. In den letzten Jahren haben sich insbesondere die Beschäftigungsquoten der Deutsch / Nicht-Deutsch kategorisierten Perosnengruppen weitestgehend angeglichen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
 <br>
 <b>BNK-Indikator</b>
