--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -55,9 +55,9 @@
 8-1-title: Erwerbstätige Aufstocker
 8-2-title: Beschäftigungsquote (15- bis 64-Jährige)
 8-3-title: Bruttoinlandsprodukt
-8-4-title: Drittmittelvolumen der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in EURO
-8-5-title: Langzeitarbeitslosenquote
-8-6-title: sv-Beschäftigte (55 Jahre und älter)
+8-4-title: Langzeitarbeitslose im Verhältnis zu Langzeitleistungsbeziehern
+8-5-title: Anzahl teilnehmender Betriebe am Wohnortcluster
+8-6-title: sv-Beschäftigte
 
 9-1-title: Anzahl der angesiedelten Unternehmen in brigk und EGZ
 9-2-title: Breitbandversorgung
