--- a/meta/8-3.md
+++ b/meta/8-3.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt und Bayern
-computation_definitions: Euro / EW
+computation_definitions: Bruttoinlandsprodukt in € je Einwohner/-in in Ingolstadt im Vergleich zum Bruttoinladsprodukt in € je Einwohner/-in in Bayern
 
 SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=82711-103&bypass=true&levelindex=1&levelid=1656497199885#abreadcrumb">LfStat</a> # data source  
 
@@ -33,5 +33,13 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Bruttoinlandsprodukt in € je Einwohner/-in in Ingolstadt im Vergleich zum Bruttoinladsprodukt in € je Einwohner/-in in Bayern.<br>
+<br>
+Das Bruttoinlandsprodukt je Einwohner, das als Maßstab der Wirtschaftskraft eines Landes oder einer Region gilt, beträgt im Jahr 2022 in Bayern im Schnitt 54 007 Euro.
+Von den Regierungsbezirken erreichen Oberbayern mit 67 590 Euro und Mittelfranken mit 50 400 Euro je Einwohner die höchsten Werte. Auf Kreisebene gehören zu den
+wirtschaftsstärksten Gebieten Ingolstadt mit 140 365 Euro, der Landkreis München mit 130 374 Euro sowie die kreisfreie Stadt Coburg mit 112 120 Euro je Einwohner. In den
+kreisfreien Städten liegt das Bruttoinlandsprodukt je Einwohner mit durchschnittlich 79 572 Euro deutlich höher als in den Landkreisen mit 43 299 Euro. (Quelle: <a href="https://statistik.bayern.de/presse/mitteilungen/2024/pm210/index.html#:~:text=Das%20Bruttoinlandsprodukt%20je%20Einwohner%2C%20das,je%20Einwohner%20die%20h%C3%B6chsten%20Werte.">Pressemitteilung 26.07.2024, Bayerisches Landesamt für Statistik</a>)<br>
+<br>
+<b>Ziele Nachhaltigkeitsagenda Ingolstadt:<b><br>
+N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
