--- a/meta/8-4.md
+++ b/meta/8-4.md
@@ -9,20 +9,22 @@ indicator_sort_order: 08-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Drittmittelvolumen der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in EURO 
+computation_units:  Anzahl Langzeitleistungsbezieher und Langzeitarbeitslos
 data_start_values:  # initialize the field to be shown  
- - field: Einrichtung 
-   value: Gesamt 
- - field: Einrichtung 
-   value: THI
- - field: Einrichtung 
-   value: KU   
+ - field: Langzeitleistungsbezieher und Langzeitarbeitslos 
+   value: Langzeitleistungsbezieher Männer 
+ - field: Langzeitleistungsbezieher und Langzeitarbeitslos 
+   value: Langzeitleistungsbezieher Frauen
+ - field: Langzeitleistungsbezieher und Langzeitarbeitslos 
+   value: Langzeitarbeitslos Männer
+ - field: Langzeitleistungsbezieher und Langzeitarbeitslos 
+   value: Langzeitarbeitslos Frauen    
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der Personen, die länger als 1 Jahr arbeitslos sind, im Verhältnis zu den Lanzeitleistungsbeziehern nach Geschlecht
 
-SOURCE_TYPE: "Technische Hochschule Ingolstadt und Katholische Universität Eichstätt-Ingolstadt"  # data source  
+SOURCE_TYPE: "Bundesagentur für Arbeit"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -33,8 +35,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Langzeitarbeitslosenquote: Prozentualer Anteil, der länger als 1 Jahr arbeitslos ist.
-Anstieg bedingt durch die Corona-Pandemie von 2020 auf 2021. Schwankung in 2022: Starker Einfluss durch Geflüchtete aus der Ukraine. Diese sind noch unter einem Jahr im Leistungsbezug und senken somit in Relation den prozentualen Anteil der Langzeitarbeitslosen deutlich. In 2022 Fokus auf die Vermittlung von Langzeitbezieher/-innen, unter denen sich auch Langzeitarbeitslose befanden. <br>
+Dieser Indikator zeigt die Anzahl der Personen, die länger als 1 Jahr arbeitslos sind, im Verhältnis zu den Lanzeitleistungsbeziehern nach Geschlecht an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.4: Armutsbekämpfung<br>
