--- a/meta/8-6.md
+++ b/meta/8-6.md
@@ -11,16 +11,28 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl sv-Beschäftigte
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: sv-Beschäftigte 
+   value: Männer 
+ - field: sv-Beschäftigte 
+   value: Frauen
+ - field: sv-Beschäftigte 
+   value: Deutsche 
+ - field: sv-Beschäftigte 
+   value: Nicht-Deutsche
+ - field: sv-Beschäftigte 
+   value: über 55 Jahre 
+ - field: sv-Beschäftigte 
+   value: mit Berufsabschluss
+ - field: sv-Beschäftigte 
+   value: mit akademischen Abschluss 
+ - field: sv-Beschäftigte 
+   value: gesamt    
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: sv-Beschäftigte unterteilt nach Geschlecht, Alter (über / unter 55 Jahre), Deutsch / Nicht-Deutsch, Qualifikation (Ausbildung / Hochschulabschluss)
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=beschaeftigung-sozbe-svb-jc-merkmale">Bundesagentur für Arbeit</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,9 +43,11 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der sozialversicherungspflichtig Beschäftigten im Alter von 55 und älter.<br>
+Dieser Indikator zeigt die Anzahl der sv-Beschäftigten (Sozialversicherungspflichtig) unterteilt nach Geschlecht, Alter (über / unter 55 Jahre), Deutsch / Nicht-Deutsch, Qualifikation (Ausbildung / Hochschulabschluss) an.<br>
+<br>
+Es handelt sich dabei um Wohnortsstatistiken. Festzustellen sind auch weiterhin hohe Zahlen an Eintritten in den Ruhestand oder kurz davor (sv-Beschäftigte über 55 Jahre) sowie ein steigender Anteil an Akademiker/-innen und ein sinkender Anteil an Personen mit anerkanntem Berufsabschluss.
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
