--- a/meta/8-5.md
+++ b/meta/8-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 08-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,21 +20,15 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions:
 
-SOURCE_TYPE: "Jobcenter Ingolstadt"   # data source  
-source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+SOURCE_TYPE:    # data source  
+source_earliest_available_1: 
+source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Langzeitarbeitslosenquote: Prozentualer Anteil, der länger als 1 Jahr arbeitslos ist. <br>
-Anstieg bedingt durch die Corona-Pandemie von 2020 auf 2021. Schwankung in 2022: Starker Einfluss durch Geflüchtete aus der Ukraine. Diese sind noch unter einem Jahr im Leistungsbezug und senken somit in Relation den prozentualen Anteil der Langzeitarbeitslosen deutlich. In 2022 Fokus auf die Vermittlung von Langzeitbezieher/-innen, unter denen sich auch Langzeitarbeitslose befanden.<br>
-<br>
-<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
-<br>
-<b>Ingolstadtspezifischer Indikator</b>
+
