--- a/meta/8-4.md
+++ b/meta/8-4.md
@@ -22,7 +22,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl der Personen, die länger als 1 Jahr arbeitslos sind, im Verhältnis zu den Lanzeitleistungsbeziehern nach Geschlecht
+computation_definitions: Anzahl der Langzeitarbeitslosen im Verhältnis zu den Lanzeitleistungsbeziehern nach Geschlecht
 
 SOURCE_TYPE: "Bundesagentur für Arbeit"  # data source  
 source_earliest_available_1: 2019
@@ -35,7 +35,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die Anzahl der Personen, die länger als 1 Jahr arbeitslos sind, im Verhältnis zu den Lanzeitleistungsbeziehern nach Geschlecht an.<br>
+Als Langzeitleistungsbeziehende (LZB) werden - analog zur Darstellung der Kennzahlen nach § 48a SGB II - erwerbsfähige Leistungsberechtigte (ELB) bezeichnet, die in den vergangenen 24 Monaten mindestens 21 Monate hilfebedürftig (gem. § 9 SGB II) nach dem SGB II waren.<br>
+<br>
+Als Langzeitarbeitslose (LZA) gelten nach § 18 Abs. 1 SGB III alle Personen, die am jeweiligen Stichtag ein Jahr und länger bei einer Agentur für Arbeit oder bei einem Träger der Grundsicherung für Arbeitsuchende nach dem SGB II arbeitslos gemeldet waren.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.4: Armutsbekämpfung<br>
