--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -59,13 +59,13 @@
 8-5-title: Anzahl teilnehmender Betriebe am Wohnortcluster
 8-6-title: sv-Beschäftigte
 
-9-1-title: Anzahl der angesiedelten Unternehmen in brigk und EGZ
+9-1-title: Gründungssaldo
 9-2-title: Breitbandversorgung
-9-3-title: Existenzgründungen
-9-4-title: sv-Beschäftigte mit Hochschulabschluss
-9-5-title: Förderprojekte für technische und digitale Lösungen
-9-6-title: Finanzielle Beteiligung für Forschung
-9-7-title: EMAS-zertifizierte Betriebsstandorte
+9-3-title: Häufigkeit der Inanspruchnahme der Cityfreiraumförderung
+9-4-title: 5G-Abdeckung
+9-5-title: Anzahl öffentlich zugänglicher Datensätze
+9-6-title: Höhe der Drittmittel
+9-7-title: Erschlossene Gewerbeflächen durch Fernwärmeanschluss
 
 10-1-title: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren
 10-2-title: Anzahl der gemeldeten Diskriminierungsfälle
