--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der angesiedelten Unternehmen in brigk und EGZ 
+computation_units: 
 data_start_values:  # initialize the field to be shown  
  - field: Einrichtung 
    value: brigk 
@@ -20,22 +20,20 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Gründungen im Existenzgründerzentrum (EGZ) und im digitalen Gründerzentrum brigk in Ingolstadt im Verhältnis zu "nachhaltigen" Gründungen, Gründungen mit "neuen" Geschäftsmodellen.
+computation_definitions: 
 
-SOURCE_TYPE: "Existenzgründerzentrum (EGZ) und digitales Gründerzentrum (brigk)"  # data source  
-source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+SOURCE_TYPE:  # data source  
+source_earliest_available_1:
+source_periodicity_1:
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Gründungen im Existenzgründerzentrum (EGZ) und im digitalen Gründerzentrum brigk in Ingolstadt im Verhältnis zu "nachhaltigen" Gründungen, Gründungen mit "neuen" Geschäftsmodellen. <br>
-<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur<br>
+W3.1: Existenzgründungen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
