--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Existenzgründungen je 1.000 EW 
+computation_units:
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,21 +20,19 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=previous&levelindex=1&step=0&titel=Suche&levelid=1648115340450&levelid=1648115051552#abreadcrumb">LfStat</a>  # data source
+SOURCE_TYPE: # data source
 
-source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+source_earliest_available_1: 
+source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Existenzgründungen je 1.000 Einwohner. Eine natürliche Person, die eine gewerbliche oder selbstständige berufliche Tätigkeit aufnimmt (§ 507 BGB).<br>
-<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur<br>
+W3.1: Existenzgründungen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
