--- a/meta/9-4.md
+++ b/meta/9-4.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der sv-Beschäftigte mit Hochschulabschluss
+computation_units:
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,24 +20,19 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: Amt für Statistik und Stadtforschung  # data source  
-source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+SOURCE_TYPE:  # data source  
+source_earliest_available_1: 
+source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der sozialversicherungspflichtig Beschäftigten mit Hochschulabschluss in Ingolstadt. Als akademischer Abschluss gilt ein Hochschulabschluss in Form von Bachelor, Diplom, Magister, Master, Staatsexamen oder Promotion.<br>
-<br>
-Arbeitsort: Ingolstadt
-Stichtag: Juni
-<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+W3.2: Digitale Infrastruktur<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
