--- a/meta/9-5.md
+++ b/meta/9-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der Förderprojekte
+computation_units: 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,42 +18,22 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl der Förderprojekte für technische und digitale Lösungen mit Beteiligung der Stadt Ingolstadt Anzahl absolut
+computation_definitions: 
 
-SOURCE_TYPE: Wirtschaftsreferat - Stadt Ingolstadt  # data source  
-source_earliest_available_1: 2023
-source_periodicity_1: Jährlich
+SOURCE_TYPE:  # data source  
+source_earliest_available_1: 
+source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die Anzahl der Förderprojekte für technische und digitale Lösungen mit Beteiligung der Stadt Ingolstadt auf.<br>
-<br>
-Zu den Projekten, die 2023 gefördert wurden zählen:<br>
-<br>
-<ul>
- <li> <a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/Stiftungsprofessuren-und-Absolventenpreise-Toggler.php?object=tx,2789.5.1&ModID=7&FID=3052.19660.1&NavID=2789.411&La=1">Prämierung Absolventenpreis</a></li>
- <li><a href="https://www.exzellenzstiftung-ingolstadt.de/stipendien/research-summer-camp">Ignaz Kögler Exzellenzstiftung Summercamp</a></li>
- <li><a href="https://www.exzellenzstiftung-ingolstadt.de/stipendien/senior-fellow">Ignaz Kögler Exzellenzstiftung Senior Fellow</a></li>
- <li><a href="https://www.ingolstadt-ifg.de/amiflying">UAM-Netzwerktreffen</a></li>
- <li><a href="https://www.ingolstadt.de/Wirtschaft/Innovation/Urban-Air-Mobility/Drohnentag-in-Ingolstadt.php?object=tx,2789.5&ModID=7&FID=3052.19984.1&NavID=3052.280&La=1">Drohnentag Ingolstadt</a></li>
- <li><a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/Stiftungsprofessuren-und-Absolventenpreise-Toggler.php?object=tx,2789.5.1&ModID=7&FID=3052.19660.1&NavID=2789.411&La=1">Stiftungsprofessuren Ingolstadt</a></li>
- <li>Wissenschaftsempfang Ingolstadt</li>
- <li><a href="https://www.ingolstadt-ifg.de/amiflying">AMI-FlyingIN2air</a></li>
- <li><a href="https://www.ibp.fraunhofer.de/de/projekte-referenzen/simulation-mechanischer-turbulenzen.html">INCityTakeOff</a></li>
- <li><a href="https://www.ingolstadt-ifg.de/5going">5GoIng</a></li>
- <li><a href="https://www.ingolstadt-ifg.de/sue">SUE - Self-Driving Urban E-Shuttle</a></li>
- <li><a href="https://www.ingolstadt-ifg.de/wirtschaft-foerdern-1/innovationsprojekte/kivi-1">KIVI - Künstliche Intelligenz im Verkehrssystem Ingolstadts</a></li>
- <li><a href="https://wikoin.de/">WIKOIN</a></li>
- <li><a href="https://www.ingolstadt-ifg.de/wohnortcluster">Wohnortcluster</a></li>
-</ul><br>
-<br>
+
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-<br>
+W2.1: Aufbau Ingolstadt als Wissenschaftsstandort <br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
