--- a/meta/9-6.md
+++ b/meta/9-6.md
@@ -18,23 +18,21 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Summe finanzielle Beteiligung der Stadt für Forschung in Euro
+computation_definitions: 
 
-SOURCE_TYPE: Wirtschaftsreferat - Stadt Ingolstadt  # data source  
-source_earliest_available_1: 2023
-source_periodicity_1: Jährlich
+SOURCE_TYPE:  # data source  
+source_earliest_available_1: 
+source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Summe der finanziellen Beteiligung der Stadt für Forschung in Euro setzt sich aus den Projekten zusammen, die im Indikator <a href="https://sdg.nachhaltigkeitsagenda-ingolstadt.de/9-5/">9.5 Förderprojekte für technische und digitale Lösungen</a> genannt werden.<br>
-<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-<br>
+W2.2: Forschungsintensität<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
