--- a/meta/10-8.md
+++ b/meta/10-8.md
@@ -22,7 +22,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anteil der Schüler/-innen in Einzelinklusion an Ingolstädter Schulen nach Schulart
 
 SOURCE_TYPE: Stadt Ingolstadt, Schulverwaltungsamt, Inklusions-Monitoring, 01.10. des jew. Schuljahres  # data source  
 source_earliest_available_1: 2019
