--- a/meta/10-3.md
+++ b/meta/10-3.md
@@ -35,7 +35,7 @@ Der Indikator zeigt die Verteilung in Ingolstadt nach Menschen mit und ohne Migr
 <br>
 Eine Person hat einen Migrationshintergrund, wenn sie selbst oder mindestens ein Elternteil nicht mit deutscher Staatsangehörigkeit geboren wurde. Im Einzelnen umfasst diese Definition zugewanderte und nicht zugewanderte Ausländerinnen und Ausländer, zugewanderte und nicht zugewanderte Eingebürgerte, (Spät-) Aussiedlerinnen und (Spät-) Aussiedler sowie die als Deutsche geborenen Nachkommen dieser Gruppen.<br>
 <br>
-Die Vertriebenen des Zweiten Weltkrieges haben (gemäß Bundesvertriebenengesetz) einen gesonderten Status; sie und ihre Nachkommen zählen daher nicht zur Bevölkerung mit Migrationshintergrund. (Quelle: <a href="https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Bevoelkerung/Migration-Integration/Glossar/migrationshintergrund.html">Statistisches Bundesamt</a>.<br>
+Die Vertriebenen des Zweiten Weltkrieges haben (gemäß Bundesvertriebenengesetz) einen gesonderten Status; sie und ihre Nachkommen zählen daher nicht zur Bevölkerung mit Migrationshintergrund. (Quelle: <a href="https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Bevoelkerung/Migration-Integration/Glossar/migrationshintergrund.html">Statistisches Bundesamt</a>).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.3: Förderung des interkulturellen und interreligiösen Dialogs<br>
