--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -75,6 +75,7 @@
 10-6-title: Einbürgerungen im Jahr
 10-7-title: Wohnfläche (m² je Einwohner/-in) in den 12 Stadtbezirken, Gini-Koeffizient
 10-8-title: Schüler/-innen in Einzelinklusion
+10-9-title: Gewalttaten in Einrichtungen für Menschen mit Behinderungen
 
 11-1-title: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung
 11-2-title: Anzahl barrierefreier Bushaltestellen
