--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -76,6 +76,7 @@
 10-7-title: Wohnfläche (m² je Einwohner/-in) in den 12 Stadtbezirken, Gini-Koeffizient
 10-8-title: Schüler/-innen in Einzelinklusion
 10-9-title: Gewalttaten in Einrichtungen für Menschen mit Behinderungen
+10-10-title: Ermäßigungen in öffentlichen Kultur- und Bildungseinrichtungen
 
 11-1-title: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung
 11-2-title: Anzahl barrierefreier Bushaltestellen
