--- a/meta/10-11.md
+++ b/meta/10-11.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt den Anteil der Kinder mit (nicht-)deutscher Familiensprache in KiTas an.<br>
+Dieser Indikator zeigt den Anteil der Kinder mit deutscher und nicht-deutscher Familiensprache in KiTas an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
