--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -77,7 +77,7 @@
 10-8-title: Schüler/-innen in Einzelinklusion
 10-9-title: Gewalttaten in Einrichtungen für Menschen mit Behinderungen
 10-10-title: Ermäßigungen in öffentlichen Kultur- und Bildungseinrichtungen
-10-11-title: Kinder mit (nicht-)deutscher Familiensprache in KiTas
+10-11-title: Kinder mit nicht-deutscher Familiensprache in KiTas
 
 11-1-title: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung
 11-2-title: Anzahl barrierefreier Bushaltestellen
