--- a/meta/10-10.md
+++ b/meta/10-10.md
@@ -32,7 +32,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die Anzahl der Einrichtungen der Stadt Ingolstadt an, die Eintrittsermäßigungen anbieten im Sinne von einer Sozialermäßigung bzw. Ermäßigungen für Kinder oder Jugendliche.<br>.
+Dieser Indikator zeigt die Anzahl der Einrichtungen der Stadt Ingolstadt an, die Eintrittsermäßigungen anbieten im Sinne von einer Sozialermäßigung bzw. Ermäßigungen für Kinder oder Jugendliche.<br>
 <br>
 Hierzu zählen folgende Einrichtungen: Simon-Mayr-Sing- und Musikschule, Stadtbücherei, Volkshochschule Ingolstadt, städt. Museen (Zentrum Stadtgeschichte mit Stadtmuseum, Bauerngerätemuseum, Marieluise-Fleißer-Haus, Deutsches Medizinhistorisches Museum, Museum für konkrete Kunst, Lechner Museum, Asamkirche Maria de Victoria, Stadttheater Ingolstadt, Kulturamt Ingolstadt.<br>
 <br>
