--- a/meta/9-6.md
+++ b/meta/9-6.md
@@ -11,18 +11,20 @@ graph_type: bar  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Euro
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Einrichtung 
+   value: KU-Eichstätt-Ingolstadt 
+ - field: Einrichtung 
+   value: TH Ingolstadt
+ - field: Einrichtung 
+   value: gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Katholische Universität Eichstätt-Ingolstadt und Technische Hochschule Ingolstadt # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
