--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -13,13 +13,19 @@ computation_units: Studierendenanzahl und Anteil ausländischer Studierender
 
 data_start_values:  # initialize the field to be shown  
   - field: Einrichtung 
-    value: THI
+    value: THI - deutsche Studierende
   - field: Einrichtung 
-    value: KU
+    value: THI - ausländische Studierende
+  - field: Einrichtung 
+    value: KU - deutsche Studierende
+  - field: Einrichtung 
+    value: KU - ausländische Studierende
+  - field: Einrichtung 
+    value: gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl der Studierenden insgesamt und Anzahl der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU)
+computation_definitions: Anzahl der Studierenden insgesamt und Anzahl der ausländischen und deutschen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU)
 
 SOURCE_TYPE: Technische Hochschule Ingolstadt und Katholische Universität Eichstätt-Ingolstadt jeweils zum 1.12.  # data source  
 source_earliest_available_1: 2019
@@ -32,7 +38,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die Anzahl der Studierenden insgesamt und Anzahl der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) an. <br>
+Dieser Indikator zeigt die Anzahl der Studierenden insgesamt und Anzahl der ausländischen und deutschen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) an. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 B2.4: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
