--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -41,6 +41,6 @@ reporting_status: complete
 Dieser Indikator zeigt die Anzahl der Studierenden insgesamt und Anzahl der ausländischen und deutschen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) an. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-B2.4: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
+W2.1: (internationaler) Studierendenaufwuchs <br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
