--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -80,7 +80,7 @@
 10-11-title: Kinder mit nicht-deutscher Familiensprache in KiTas
 
 11-1-title: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung
-11-2-title: Anzahl barrierefreier Bushaltestellen
+11-2-title: Barrierefreie und inklusive Mobilitätsangebot
 11-3-title: Barrierefreies Wohnen
 11-4-title: Gefahrenzonen in Starkregenkartierung
 11-5-title: Bei Verkehrsunfällen Getötete oder Schwerverletzte
