--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -7,39 +7,39 @@ indicator_sort_order: 11-02-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: bar  # chart types include: bar, line, binary 
+graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Bushaltestellen und Ausstattung
+computation_units: Anzahl Barrierefreie und inklusive Mobilitätsangebot
 data_start_values:  # initialize the field to be shown  
- - field: Haltestellen
-   value: Gesamt 
- - field: Haltestellen
-   value: Kassler Sonderboard 
- - field: Haltestellen
-   value: Vorlesetaster für Blinde 
- - field: Haltestellen 
-   value: Taktikeles Leitsystem 
+ - field: Barrierefreie und inklusive Mobilitätsangebot
+   value: Barrierefreie Parkplätze 
+ - field: Barrierefreie und inklusive Mobilitätsangebot
+   value: Eltern-Kind-Parkplätze
+ - field: Barrierefreie und inklusive Mobilitätsangebot
+   value: Ampeln mit Sensoren 
+ - field: Barrierefreie und inklusive Mobilitätsangebot
+   value: Blindenleitsysteme
+ - field: Barrierefreie und inklusive Mobilitätsangebot
+   value: Bushaltestellen 
+ - field: Barrierefreie und inklusive Mobilitätsangebot
+   value: Busse
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Barrierefreies und inklusives Mobilitätsangebot (Anteil barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind-Parkplätze, barrierefreie Parkplätze)
 
-SOURCE_TYPE: INVG  # data source  
-source_earliest_available_1:  2022
-source_periodicity_1: 
+SOURCE_TYPE: IFG Aör, VGI, Tiefbauamt, Amt für Verkehrstechnik und Geoinformation  # data source  
+source_earliest_available_1:  2023
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Grundsätzlich gilt: Wenn Straßenbau- bzw. -Sanierungsmaßnahmen stattfinden und Haltestellen betroffen sind, werden diese automatisch barrierefrei umgebaut und der Kassler Sonderbord (ein besonderer abgeflachter Bordstein für einfacheren Aus- und Einstieg) mit taktilem Leitsystem ausgestattet.  Die Kosten übernimmt die INVG.<br>
-<br>
-Der gelbe Vorlesetaster mit der „text-to-speech“-Funktion wird zusammen mit den DFI-Anzeigern an Haltestellen der INVG installiert. Mit Abschluss der 2. Baustufe konnten bisher 130 Haltestellen im Stadtgebiet realisiert werden.<br>
-<br>
-An den zentralen Haltestellen ZOB und Nordbahnhof verweisen Linienbezeichnungen in Braille-Schrift auf die jeweilige Bussteignummer.<br>
+Der Indikator weist due Anzahl des barrierefreien und inklusiven Mobilitätsangebote aus (Anteil barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind- und Behindertenparkplätze).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.3: Barrierefreie Mobilität für alle Menschen<br>
