--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -41,6 +41,12 @@ reporting_status: inprogress
 ---
 Der Indikator weist due Anzahl des barrierefreien und inklusiven Mobilitätsangebote aus (Anteil barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind- und Behindertenparkplätze).<br>
 <br>
+Barrierefreie Parkplätze: Die Aussage bezieht sich auf Anlagen und Stellplätze in städtischer Hand bzw. in Hand der Beteiligungsunternehmen der Stadt Ingolstadt.<br>
+<br>
+In einigen, wenigen Parkeinrichtungen gab es früher Eltern-Kind-Stellplätze. Da es aber regelmäßig Diskussionen mit „Falschnutzern“ gab und eine rechtliche Durchsetzung nicht ist, wurden diese, in den Sanierungen, nicht mehr ausgewiesen.<br>
+<br>
+Aktuell existieren keine barrierefreien E-Ladestationen auf den Parkgeländen der IFG. Diese sind zwar breiter gebaut als normale Parkplätze, entsprechen aber nicht den Kriterien barrierefreier Stellplätze und fallen daher hier in der Statistik nicht darunter.<br> 
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.3: Barrierefreie Mobilität für alle Menschen<br>
 <br>
