--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -83,7 +83,7 @@
 11-2-title: Barrierefreie und inklusive Mobilitätsangebot
 11-3-title: Barrierefreies Wohnen
 11-4-title: Gefahrenzonen in Starkregenkartierung
-11-5-title: Bei Verkehrsunfällen Getötete oder Schwerverletzte
+11-5-title: Verkehrsunfälle mit Personenschaden
 11-6-title: Beteiligte an Unfällen mit Personenschaden
 11-7-title: Biotopflächenfaktor
 11-8-title: Fertiggestellte Wohngebäude mit erneuerbarer Heizenergie bzw. Fernwärme
