--- a/meta/11-5.md
+++ b/meta/11-5.md
@@ -9,18 +9,18 @@ indicator_sort_order: 11-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Getötete oder Schwerverletzte im Verkehr
+computation_units: Anzahl Personenschaden, Getötete oder Schwerverletzte
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Unfall mit 
+   value: Getötete oder schwer verletzte 
+ - field: Unfall mit 
+   value: Personenschaden 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Zahl der Verkehrsunfälle mit Personenschaden sowie bei Verkehrsunfällen Getötete oder schwerverletzte
 
-SOURCE_TYPE: Amtliche Daten des Amts für Statistik und Stadtforschung  # data source  
+SOURCE_TYPE: Amt für Statistik und Stadtforschung der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Bei Verkehrsunfällen Getötete oder Schwerverletzte. Tendenz gleichbleibend mit leichtem Anstieg 2022.<br>
+Dieser Indikator zeigt die Zahl der Verkehrsunfälle mit Personenschaden sowie bei Verkehrsunfällen Getötete oder Schwerverletzte an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.5: Verbesserung der Verkehrssicherheit<br>
