--- a/meta/11-6.md
+++ b/meta/11-6.md
@@ -9,20 +9,20 @@ indicator_sort_order: 11-06-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Beteiligte an Unfällen mit Personenschaden 
+computation_units: Anzahl Spiel-und Freizeitanlagen 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Spiel-und Freizeitanlagen 
+   value: barrierefrei zugänglich 
+ - field: Spiel-und Freizeitanlagen 
+   value: nicht barrierefrei zugänglich
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der Spiel- und Freizeitanlagen in der Stadt gesamt und Anteil der barrierefrei zugänglichen Anlagen
 
-SOURCE_TYPE: Amt für Statistik und Stadtforschung  # data source  
-source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+SOURCE_TYPE: Amt für Verkehrsmanagement und Geoinformation der Stadt Ingolstadt # data source  
+source_earliest_available_1: 2022
+source_periodicity_1: keine Angabe
 
 language: de   
 published: true 
@@ -31,9 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl an Beteiligten an Unfällen mit Personenschaden. Starker Rückgang seit 2020. Rückgang von 2019 auf 2020 u.a. auch auf Kontaktbeschränkungen durch Covid-Politik zurückzuführen. <br>
+Anzahl der Spiel- und Freizeitanlagen in der Stadt gesamt und Anteil der barrierefrei zugänglichen Anlagen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.5: Verbesserung der Verkehrssicherheit<br>
+N2.3 Förderung der Bewegungsmöglichkeiten/-angebote sowie deren Zugang für alle<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
