--- a/meta/11-7.md
+++ b/meta/11-7.md
@@ -7,33 +7,43 @@ indicator_sort_order: 11-07-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Biotopflächenfaktor 
+computation_units: Anzahl fertiggestellter Wohngebäude
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Neue Wohngebäude 
+   value: gesamt 
+ - field: Neue Wohngebäude 
+   value: Fernwärme
+ - field: Neue Wohngebäude 
+   value: Geothermie 
+ - field: Neue Wohngebäude 
+   value: Umweltthermie
+ - field: Neue Wohngebäude 
+   value: Solarthermie 
+ - field: Neue Wohngebäude 
+   value: Holz
+ - field: Neue Wohngebäude 
+   value: Biomasse
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl fertiggestellter Wohngebäude mit erneuerbarer Heizenergie sowie Fernwärme
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=31121-012r&bypass=true&levelindex=1&levelid=1723470904542#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Verhältnis naturhaushaltwirksamer Flächen zur gesamten Grundstücksfläche.<br>
+Dieser Indikator zeigt die Anzahl der fertiggestellten Wohngebäude insgesamt an sowie die Wohngebäude, die primär mit erneuerbaren Heizenergien sowie Fernwärme beheizt werden. Zu erneuerbaren Heizenergien werden neben der Berücksichtigung der Fernwärme Geothermie, Umweltthermie (Luft / Wasser), Solarthermie, Holz und sonstige Biomasse gezählt. Der Anteil hat sich im Vergleich zu 2019 mit einem Anteil von 54 % deutlich gesteigert. 2023 lag der Anteil bei über 84 % fertiggestellten Wohngebäuden mit primär erneuerbaren Heizenergien. Allerdings ist auch die Zahl der fertiggestellten Wohngebäude von 280 (2019) auf 208 (2023) ebenfalls deutlich gesunken.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle<br>
+N3.3: Förderung von nachhaltigem Bauen und vermehrte Nutzung von Leerständen und Baulücken, Erhöhung der Sanierungsquote<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
