--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -85,8 +85,8 @@
 11-4-title: Gefahrenzonen in Starkregenkartierung
 11-5-title: Verkehrsunfälle mit Personenschaden
 11-6-title: Barrierefreie Spiel- und Freizeitanlagen
-11-7-title: Biotopflächenfaktor
-11-8-title: Fertiggestellte Wohngebäude mit erneuerbarer Heizenergie bzw. Fernwärme
+11-7-title: Fertiggestellte Wohngebäude mit erneuerbarer Heizenergie bzw. Fernwärme
+11-8-title: Flächeninanspruchnahme und Flächenneuinanspruchnahme
 11-9-title: Flächeninanspruchnahme
 11-10-title: Flächenneuinanspruchnahme
 11-11-title: Flächennutzungsintensität
