--- a/meta/11-9.md
+++ b/meta/11-9.md
@@ -9,16 +9,16 @@ indicator_sort_order: 11-09-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Flächeninanspruchname in Prozent 
+computation_units: m² / Einwohner/-in
 data_start_values:  # initialize the field to be shown  
  - field: Flächenart 
-   value: Siedlungs-und Verkehrsfläche 
+   value: Siedlungs- und Verkehrsfläche 
  - field: Flächenart 
-   value: Vegetation
+   value: Siedlungs- und Verkehrsfläche
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Flächennutzungsintensität in m² je Einwohner/-in
 
 SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=33111-003r&bypass=true&levelindex=1&levelid=1680779324034#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die Anteile der Siedlungs- und Verkehrsfläche sowie der Vegetationsfläche an der Gesamtfläche in Prozent an. Der restliche Flächenanteil teil sich auf die Bereiche Abbauland und Gewässer auf, die mit einem nur geringen Flächenanteil hier vernachlässigbar sind.<br>
+Der Indikator zeigt die Siedlungs- und Verkehrsfläche in m² pro Einwohner/-in sowie die Vegetationsfläche an, die in Ingolstadt genutzt werden. Aufgrund einer steigenden Bevölkerungszahl ab insbesondere 2021 bei nahezu gleichbleibender Siedlungs- und Verkehrsflächen sowie Vegetationsflächen nimmt die Fläche, die pro Einwohner/-in in m² zur Verfügung stehen aktuell ab.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
