--- a/meta/11-10.md
+++ b/meta/11-10.md
@@ -7,22 +7,24 @@ indicator_sort_order: 11-10-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent
-data_start_values:  # initialize the field to be shown  
- - field: Flächenart 
-   value: Siedlungs- und Verkehrsfläche
- - field: Flächenart 
-   value: Vegetation 
+computation_units: km² 
+data_start_values:  # initialize the field to be shown
+ - field: Lärmbelastete Fläche 
+   value: über 55 dB 
+ - field: Lärmbelastete Fläche 
+   value: über 65 dB
+ - field: Lärmbelastete Fläche 
+   value: über 75 dB
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Flächenneuinanspruchnahme im vergleich zum Vorjahr in Prozent 
+computation_definitions: Lärmbelastete Fläche in km²
 
-SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=33111-003r&bypass=true&levelindex=1&levelid=1680779324034#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
-source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/laermaktionsplan">Lärmaktionsplan der Stadt Ingolstadt</a>  # data source  
+source_earliest_available_1: 2020
+source_periodicity_1: Nächste Lärmkartierung vsl. 2029
 
 language: de   
 published: true 
@@ -31,9 +33,15 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator zeigt die Die prozentuale Änderungsrate von Siedlungs- und Verkehrsflächen sowie der Vegetationsflächen im Vergleich zum Vorjahr in Prozent an. Die restlichen Flächenanteile teilen sich in Abbauland und Gewässer auf, sind jedoch aufgrund ihres verhältnismäßig kleinen Anteil an der Gesamtfläche vernachlässigbar.<br>
+Im Rahmen der Lärmaktionsplanung wurden die Daten zur von Umgebungslärm belasteten Flächen 2020 aktualisiert und bilden Schätzungen ab. Die Lautstärke wird in Dezibel (dB) angegeben. Die Aktionsplanung erfolgt auf Grundlage der EU-Umgebungslärmrichtlinie 2002/49/EG und deren nationaler Umsetzung in §§ 47a-f BImSchG sowie Art. 2 Abs. 3 und Art. 4 Satz 2 BayImSchG.<br>
+<br>
+Werte über 55 dB entsprechen einer hohen Belastung. Werte darüber hinaus überschreiten die Anhaltswerte bzw. stellen eine sehr hohe Belastung sowie eine Gesundheitsgefährdung dar.<br>
+<br>
+Weitere Informationen zur Anzahl der von Umgebungslärm ausgesetzten Personen in Ingolstadt und die Zusammensetzung der Lärmindizes finden Sie auf der Seite der <a href="https://www.ingolstadt.de/laermaktionsplan">Lärmaktionsplanung der Stadt Ingolstadt</a> im Kurzbericht.<br>
+<br>
+Auf Grundlage dieser Berechnungen werden in den folgenden Jahren Maßnahmen zur Reduzierung der lärmbelasteten Fläche und Personen umgesetzt. Weitere Informationen hierzu finden Sie ebenfalls auf der Seite der Stadt Ingolstadt<br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
 <br>
-<b>BNK-Indikator</b>
+<b>Ingolstadtspezifischer Indikator</b>
