--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -88,7 +88,7 @@
 11-7-title: Fertiggestellte Wohngebäude mit erneuerbarer Heizenergie bzw. Fernwärme
 11-8-title: Flächeninanspruchnahme und Flächenneuinanspruchnahme
 11-9-title: Flächennutzungsintensität
-11-10-title: Flächenneuinanspruchnahme
+11-10-title: Lärmkartierung / Anzahl der lärmbelasteten Flächen (Fortschritt / Rückschritt)
 11-11-title: Flächennutzungsintensität
 11-12-title: Lärmkartierung / Anzahl der lärmbelasteten Flächen (Fortschritt / Rückschritt)
 11-13-title: Mietpreise (ohne geförderten Wohnungsbau)
