--- a/meta/11-11.md
+++ b/meta/11-11.md
@@ -9,18 +9,18 @@ indicator_sort_order: 11-11-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: m² / Einwohner/-in
+computation_units: € je m²
 data_start_values:  # initialize the field to be shown  
- - field: Flächenart 
-   value: Siedlungs- und Verkehrsfläche 
- - field: Flächenart 
-   value: Siedlungs- und Verkehrsfläche
+ - field: Region 
+   value: Ingolstadt 
+ - field: Region 
+   value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Flächennutzungsintensität in m² je Einwohner/-in
+computation_definitions: Mietpreise (ohne geförderten Wohnungsbau) als durchschnittliche Nettokaltmiete in € je m² 
 
-SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=33111-003r&bypass=true&levelindex=1&levelid=1680779324034#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
+SOURCE_TYPE: <a href="https://ivd.net/">IVD, neu abgeschlossene Mietverträge</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,9 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator zeigt die Siedlungs- und Verkehrsfläche in m² pro Einwohner/-in sowie die Vegetationsfläche an, die in Ingolstadt genutzt werden. Aufgrund einer steigenden Bevölkerungszahl ab insbesondere 2021 bei nahezu gleichbleibender Siedlungs- und Verkehrsflächen sowie Vegetationsflächen nimmt die Fläche, die pro Einwohner/-in in m² zur Verfügung stehen aktuell ab.  <br>
+Mietpreise ohne geförderten Wohnungsbau. Angegeben wird die durchschnittliche Nettokaltmiete in € je m². <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung<br>
 <br>
 <b>BNK-Indikator</b>
