--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -89,7 +89,7 @@
 11-8-title: Flächeninanspruchnahme und Flächenneuinanspruchnahme
 11-9-title: Flächennutzungsintensität
 11-10-title: Lärmkartierung / Anzahl der lärmbelasteten Flächen (Fortschritt / Rückschritt)
-11-11-title: Flächennutzungsintensität
+11-11-title: Mietpreise (ohne geförderten Wohnungsbau)
 11-12-title: Lärmkartierung / Anzahl der lärmbelasteten Flächen (Fortschritt / Rückschritt)
 11-13-title: Mietpreise (ohne geförderten Wohnungsbau)
 11-14-title: Naherholungsflächen (mit Wald)
